# bevy_simplex

./: Cargo.toml  README.md
assets/: animate_shader.wgsl  shader.wgsl
src/: constraint.rs  error.rs  gui_simplex.rs  lib.rs  linear_function.rs  linear_programm.rs  main.rs  simplex.rs
