[package]
name = "bevy_simplex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# dynamic_linking to delete for release
bevy = { version = "0.13.2", features = ["dynamic_linking"] }
# regex = { git = "https://github.com/rust-lang/regex.git" }
bevy_egui = "0.27.0"
bevy-inspector-egui = "0.24.0"

itertools = "0.12.1"
num-traits = "0.2.18"
nom = "7.1.3"
euclid = "0.22.9"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[lint.rust]
warn = ["clippy::all"]
