[package]
name = "bevy_simplex"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# dynamic_linking to delete for release
bevy = { version = "0.15.2", features = ["dynamic_linking"] }
# regex = { git = "https://github.com/rust-lang/regex.git" }
# bevy = { git = "https://github.com/bevyengine/bevy.git" }
bevy_egui = "0.33"
# bevy-inspector-egui = "0.24.0"

itertools = "0.14.0"
num-traits = "0.2.19"
nom = "8.0.0"
euclid = "0.22.11"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# [lint.rust]
# warn = ["clippy::all"]
